Added entertainer review apis
